Add gif image to layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <body>
         <div class="main">
-            <div class="image"></div>
+            <div class="image">
+                <img src="/images/icegif-5.gif" alt="Girl looking into the city">
+                <div class="odin-tag"></div>
+            </div>
             <div class="info"></div>
         </div>
     </body>
