Add gif credits to div footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="image">
                 <img src="/images/icegif-5.gif" alt="Girl looking into the city">
                 <div class="odin-tag"></div>
+                <div class="photocred">Photo Credits: © 2022 <a href="https://www.icegif.com/lofi-10/">_icegif.com</a></div>
             </div>
             <div class="info"></div>
         </div>
