--- a/index.html
+++ b/index.html
@@ -15,7 +15,40 @@
                 <div class="odin-tag"></div>
                 <div class="photocred">Photo Credits: © 2022 <a href="https://www.icegif.com/lofi-10/">_icegif.com</a></div>
             </div>
-            <div class="info"></div>
+            <div class="info">
+                <div class="text">
+                    <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+                    <p>You <em>know</em> you want to.</p>
+                </div>
+                <form action="" method="post">
+                    <div class="fname">
+                        <label for="fname">First Name<span aria-label="required">*</span></label>
+                        <input type="text" id="fname" name="fname" required>
+                    </div>
+                    <div class="lname">
+                        <label for="lname">Last Name<span aria-label="required">*</span></label>
+                        <input type="text" id="lname" name="lname" required>
+                    </div>
+                    <div class="email">
+                        <label for="email">E-mail<span aria-label="required">*</span></label>
+                        <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                    </div>
+                    <div class="phone">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}">
+                    </div>
+                    <div class="password">
+                        <label for="pass">Password<span aria-label="required">*</span></label>
+                        <input type="password" id="pass" name="password" required>
+                    </div>
+                    <div class="confirm">
+                        <label for="confirm">Confirm Password<span aria-label="required">*</span></label>
+                        <input type="password" id="confirm" name="confirm" required>
+                    </div>
+                    <button>Create Account</button>
+                </form>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
         </div>
     </body>
 
