Add relative positioning to text side of page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <button>Create Account</button>
                 </form>
-                <p>Already have an account? <a href="#">Log in</a></p>
+                <p class="login">Already have an account? <a href="#">Log in</a></p>
             </div>
         </div>
     </body>
