Complete most of the aesthetic templating on info side

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="text">
                     <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                     <p>You <em>know</em> you want to.</p>
+                    <p class="dothis">Let's do this!</p>
                 </div>
                 <form action="" method="post">
                     <div class="fname">
@@ -47,6 +48,7 @@
                     </div>
                     <button>Create Account</button>
                     <p class="login">Already have an account? <a href="#">Log in</a></p>
+                    <div class="header"></div>
                 </form>
             </div>
         </div>
