--- a/index.html
+++ b/index.html
@@ -21,35 +21,36 @@
                     <p>You <em>know</em> you want to.</p>
                     <p class="dothis">Let's do this!</p>
                 </div>
-                <form action="" method="post">
-                    <div class="fname">
-                        <label for="fname">First Name<span aria-label="required">*</span></label>
-                        <input type="text" id="fname" name="fname" required>
-                    </div>
-                    <div class="lname">
-                        <label for="lname">Last Name<span aria-label="required">*</span></label>
-                        <input type="text" id="lname" name="lname" required>
-                    </div>
-                    <div class="email">
-                        <label for="email">E-mail<span aria-label="required">*</span></label>
-                        <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-                    </div>
-                    <div class="phone">
-                        <label for="phone">Phone Number</label>
-                        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}">
-                    </div>
-                    <div class="password">
-                        <label for="pass">Password<span aria-label="required">*</span></label>
-                        <input type="password" id="pass" name="password" required>
-                    </div>
-                    <div class="confirm">
-                        <label for="confirm">Confirm Password<span aria-label="required">*</span></label>
-                        <input type="password" id="confirm" name="confirm" required>
-                    </div>
-                    <button>Create Account</button>
-                    <p class="login">Already have an account? <a href="#">Log in</a></p>
-                    <div class="header"></div>
-                </form>
+                <div class="header">
+                    <form action="" method="post">
+                        <div class="fname">
+                            <label for="fname">First Name<span aria-label="required">*</span></label>
+                            <input type="text" id="fname" name="fname" required>
+                        </div>
+                        <div class="lname">
+                            <label for="lname">Last Name<span aria-label="required">*</span></label>
+                            <input type="text" id="lname" name="lname" required>
+                        </div>
+                        <div class="email">
+                            <label for="email">E-mail<span aria-label="required">*</span></label>
+                            <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                        </div>
+                        <div class="phone">
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}">
+                        </div>
+                        <div class="password">
+                            <label for="pass">Password<span aria-label="required">*</span></label>
+                            <input type="password" id="pass" name="password" required>
+                        </div>
+                        <div class="confirm">
+                            <label for="confirm">Confirm Password<span aria-label="required">*</span></label>
+                            <input type="password" id="confirm" name="confirm" required>
+                        </div>
+                        <button>Create Account</button>
+                        <p class="login">Already have an account? <a href="#">Log in</a></p>
+                    </form>
+                </div>
             </div>
         </div>
     </body>
