Add media query for smaller screen resolutions and other minor css fixes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="phone">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}">
+                            <input type="tel" id="phone" name="phone" placeholder="Optional" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}">
                         </div>
                         <div class="password">
                             <label for="pass">Password<span aria-label="required">*</span></label>
