Add copyright and github profile link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <p class="login">Already have an account? <a href="#">Log in</a></p>
                     </form>
                 </div>
+                <p class="copy">Copyright © 2022 <a href="https://github.com/neelg07/Project-Sign-Up-Form">@neelg07</a></p>
             </div>
         </div>
     </body>
