--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <div class="main">
             <div class="image">
                 <img src="/images/icegif-5.gif" alt="Girl looking into the city">
-                <div class="odin-tag"></div>
+                <div class="odin-tag">
+                    <img src="/images/odin-lined.png" alt="Odin Icon" id="icon">
+                    <h1>ODIN</h1>
+                </div>
                 <div class="photocred">Photo Credits: © 2022 <a href="https://www.icegif.com/lofi-10/">_icegif.com</a></div>
             </div>
             <div class="info">
@@ -25,15 +28,15 @@
                     <form action="" method="post">
                         <div class="fname">
                             <label for="fname">First Name<span aria-label="required">*</span></label>
-                            <input type="text" id="fname" name="fname" required>
+                            <input type="text" id="fname" name="fname" autofocus placeholder=" " required>
                         </div>
                         <div class="lname">
                             <label for="lname">Last Name<span aria-label="required">*</span></label>
-                            <input type="text" id="lname" name="lname" required>
+                            <input type="text" id="lname" name="lname" placeholder=" " required>
                         </div>
                         <div class="email">
                             <label for="email">E-mail<span aria-label="required">*</span></label>
-                            <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                            <input type="email" id="email" name="email" placeholder=" " required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                         </div>
                         <div class="phone">
                             <label for="phone">Phone Number</label>
@@ -41,11 +44,11 @@
                         </div>
                         <div class="password">
                             <label for="pass">Password<span aria-label="required">*</span></label>
-                            <input type="password" id="pass" name="password" required>
+                            <input type="password" id="pass" name="password" placeholder=" " required>
                         </div>
                         <div class="confirm">
                             <label for="confirm">Confirm Password<span aria-label="required">*</span></label>
-                            <input type="password" id="confirm" name="confirm" required>
+                            <input type="password" id="confirm" name="confirm" placeholder=" " required>
                         </div>
                         <button>Create Account</button>
                         <p class="login">Already have an account? <a href="#">Log in</a></p>
