--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sign-Up Form</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="script.js" defer></script>
     </head>
 
     <body>
@@ -25,7 +26,7 @@
                     <p class="dothis">Let's do this!</p>
                 </div>
                 <div class="header">
-                    <form action="" method="post">
+                    <form action="" method="get">
                         <div class="fname">
                             <label for="fname">First Name<span aria-label="required">*</span></label>
                             <input type="text" id="fname" name="fname" autofocus placeholder=" " required>
@@ -44,13 +45,13 @@
                         </div>
                         <div class="password">
                             <label for="pass">Password<span aria-label="required">*</span></label>
-                            <input type="password" id="pass" name="password" placeholder=" " required>
+                            <input type="password" id="pass" name="password" minlength="5" placeholder=" " required>
                         </div>
                         <div class="confirm">
                             <label for="confirm">Confirm Password<span aria-label="required">*</span></label>
-                            <input type="password" id="confirm" name="confirm" placeholder=" " required>
+                            <input type="password" id="confirm" name="confirm" minlength='5' placeholder=" " required>
                         </div>
-                        <button>Create Account</button>
+                        <button class="but">Create Account</button>
                         <p class="login">Already have an account? <a href="#">Log in</a></p>
                     </form>
                 </div>
