--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <input type="password" id="confirm" name="confirm" minlength='5' placeholder=" " required>
                         </div>
                         <button class="but">Create Account</button>
-                        <p class="login">Already have an account? <a href="#">Log in</a></p>
+                        <p class="login">Already have an account? <a href=".">Log in</a></p>
                     </form>
                 </div>
                 <p class="copy">Copyright © 2022 <a href="https://github.com/neelg07/Project-Sign-Up-Form">@neelg07</a></p>
