Change image and font paths for use on git pages

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
         <div class="main">
             <div class="image">
-                <img src="/images/icegif-5.gif" alt="Girl looking into the city">
+                <img src="./images/icegif-5.gif" alt="Girl looking into the city">
                 <div class="odin-tag">
-                    <img src="/images/odin-lined.png" alt="Odin Icon" id="icon">
+                    <img src="./images/odin-lined.png" alt="Odin Icon" id="icon">
                     <h1>ODIN</h1>
                 </div>
                 <div class="photocred">Photo Credits: © 2022 <a href="https://www.icegif.com/lofi-10/">_icegif.com</a></div>
